DuPont DevSB/src/objects/ccrz__E_AccountGroupPriceList__c.object
<CustomObject>
    <description>Represents a mapping of Account Group to Pricelist.  This objects ties the two together, enabling the assignment and entitlement/pricing functionality.</description>
    <fields>
        <fullName>ccrz__AccountGroupPriceListID__c</fullName>
        <description>External reference id for this entry</description>
        <externalId>true</externalId>
        <label>Account Group Pricelist ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__AccountGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required - The reference to the account group</description>
        <label>Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipLabel>Account Group Price Lists</relationshipLabel>
        <relationshipName>E_AccountGroupPriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Enable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag determining whether or not this mapping record is active</description>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The date on which the pricelist is no longer available for the account group.  For example, if the EndDate__c is set to July 1, 2015 then the last date that this price list is available to the account group will be June 30, 2015.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Pricelist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required - The reference to the pricelist</description>
        <label>Pricelist</label>
        <referenceTo>ccrz__E_PriceList__c</referenceTo>
        <relationshipLabel>Account Group Price Lists</relationshipLabel>
        <relationshipName>E_AccountGroupPriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Sequence</description>
        <label>Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date for which this mapping record is active. This is the first date the mapping will be applied</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CC Account Group Price List</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Acct Group Pricelist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Account Group Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>